--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="www.linkedin.com/in/
+manju-priya-gnanasekaran-36bb65233
+" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -83,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I have around 4 years of experience in FronEnd Development. I love to build web applications, user interface designs using technologies like ReactJS, Redux Toolkit, RTK Query, ExtJS, JavaScript and GraphQL. Curious to learn new technologies and tools.</p>
+          <p>I have around 4 years of experience in FronEnd Development. I have developed web based applications and created dynamic user interface designs using technologies like ReactJS, Redux Toolkit, RTK Query, ExtJS, JavaScript and GraphQL. Eager to learn new technologies and tools.</p>
         </div>
 
           <div class="col-lg-15 pt-4 pt-lg-0 content" data-aos="fade-left">
