--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="www.linkedin.com/in/
-manju-priya-gnanasekaran-36bb65233
-" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/manju-priya-gnanasekaran-36bb65233" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
